# NeuroScore

./: .env.example  .gitignore  PRD.md  edited-PRD.md  final-prd.md
backend/: pyproject.toml
backend/app/: config.py  exceptions.py  main.py
backend/app/routers/: analysis.py  brain.py  hooks.py  inference.py  scores.py  scripts.py  timeline.py  videos.py
backend/app/schemas/: analysis.py  brain.py  inference.py  score.py  script.py  timeline.py  video.py
backend/app/services/: analysis.py  brain.py  hook_generation.py  ica_mapping.py  inference.py  jobs.py  llm_client.py  network.py  network_fixes.py  score.py  script.py  timeline.py  video.py
backend/scripts/: export_brain_mesh.py
backend/tests/: test_analysis.py  test_ica_mapping.py  test_inference.py  test_llm_client.py  test_network.py  test_network_fixes.py  test_scoring.py  test_timeline.py
frontend/: package-lock.json  package.json
frontend/public/: brain_mesh.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/hooks/: page.tsx
frontend/src/app/script/: page.tsx
frontend/src/components/: analysis-display.tsx  analysis-panel.tsx  brain-video-sync.tsx  brain-viewer.tsx  comparison-display.tsx  composite-score.tsx  hooks-tab.tsx  network-score-card.tsx  niche-selector.tsx  score-display.tsx  script-tab.tsx  tab-nav.tsx  tab-navigation.tsx  timeline-chart.tsx  video-player.tsx  video-upload.tsx
frontend/src/lib/: api.ts  hooks-access.ts  script-access.ts
scripts/: setup_tribe.py  verify_tribe.py
