[project]
name = "neuroscore"
version = "0.1.0"
description = "Neural video optimization tool — predicts brain response to video content"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "opencv-python-headless>=4.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
