[project]
name = "neuroscore"
version = "0.1.0"
description = "Neural video optimization tool — predicts brain response to video content"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "opencv-python-headless>=4.9",
    "torch>=2.5.1,<2.7",
    "torchvision>=0.20,<0.22",
    "huggingface-hub>=0.25",
    "transformers>=4.45",
    "nibabel>=5.0",
    "nilearn>=0.10",
    "pyvista>=0.43",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "numpy>=1.26",
    "anthropic>=0.39",
]

[project.optional-dependencies]
tribe = [
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
